--- a/mobileapp.css
+++ b/mobileapp.css
@@ -26,12 +26,14 @@
 	display:none !important;
 }
 
-#exec { display:none !important; }
+
+gl#exec { display:none !important; }
 
 .container {
 	max-width:100% !important;
 	width:100% !important;
 	padding-left:0 !important;
+	padding-right:0 !important;
 }
 
 .random-phrase {
@@ -40,4 +42,37 @@
 
 .arrows {
 	display:none !important;
+}
+
+#notices-change, .modal-backdrop {
+	display:none !important;
+}
+
+@media (min-width: 768px) {
+	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+		margin-left: 0 !important;
+	}
+}
+
+.nickname-user {
+	margin-right:5px;
+}
+
+#banner {
+	height:100% !important;
+}
+
+#channels-menu-caret {
+	font-size: 1em !important;
+    position: relative !important;
+    top: 6px !important;
+    left: 5px !important;
+}
+
+#feed-search-box .fa-search {
+	top:10px !important;
+}
+
+body .feed-messages {
+	margin-left:20px !important;
 }
